--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kevin Brauens personal website",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "test": "jest"
   },
   "keywords": [
     "personal, website"
@@ -12,16 +13,18 @@
   "author": "Kevin Brauen",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
     "@types/webpack-dev-server": "^4.7.2",
-    "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
+    "jest": "^29.3.1",
     "source-map-loader": "^4.0.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
